--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,11 @@
             android:name="android.nfc.action.TECH_DISCOVERED"
             android:resource="@xml/nfc_tech_filter" />
     </activity>
+        <activity
+            android:name=".SubActivity"
+            android:label="@string/app_name"
+            android:theme="@style/sub">
+        </activity>
     </application>
 
 </manifest>
